Support codecs generating multiple events (#56)
* tests: fix build

 - use https for fixture resource retrieval
 - use "latest" 5.15.x activemq
 - declare module encapsulation exports

* feature: support codec emitting multiple events

Resolves: logstash-plugins/logstash-input-jms#22